fixed main layout to prevent content from overflowing horizontally

--- a/public/modules/layout/main/style.less
+++ b/public/modules/layout/main/style.less
@@ -6,6 +6,7 @@ main-layout2 {
   height: 100vh;
   width: 100vw;
   overflow: hidden;
+  --mainnav-width: 180px;
 
   #topbar-container {
     @flex-row();
@@ -30,19 +31,21 @@ main-layout2 {
   }
   #body-container {
     @flex-row();
-    width: 100%;
+    width: 100vw;
     height: calc(100% - var(--topbar-height));
 
     #mainnav-view {
       @flex-col();
-      width: fit-content;
+      width: var(--mainnav-width);
       height: 100%;
+
     }
 
     #main-content-view {
       @flex-col();
       flex-grow: 1;
       height: 100%;
+      width: calc(100% - var(--mainnav-width));
     }
 
 
